--- a/src/main/resources/templates/addCarForm.html
+++ b/src/main/resources/templates/addCarForm.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Add A Car</title>
+<link rel="StyleSheet" href="/app.css" type="text/css">
 </head>
 <body>
 	<h2>Add A Car</h2>
@@ -18,7 +19,7 @@
 		</div>
 		<br>
 		<div>
-			<label>Year: <input type="text" name="year" required>
+			<label>Year: <input type="number" name="year" required>
 			</label>
 		</div>
 		<br>
