--- a/src/main/resources/templates/carInfoForm.html
+++ b/src/main/resources/templates/carInfoForm.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Car Info</title>
+<link rel="StyleSheet" href="/app.css" type="text/css">
 </head>
 <body>
 	<h2>Car Info</h2>
