Updates with additional functionality

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -28,9 +28,9 @@
 				<td>{{ model }}</td>
 				<td>{{ year }}</td>
 				<td>
-					<form method="post" action="/rentCar">
+					<form method="post" action="/rental">
 						<input type="hidden" name="index" value="{{ -index }}">
-						<button>Rent Out A Car</button>
+						<button>Rent Out This Car</button>
 					</form>
 				</td>
 			</tr>
@@ -45,15 +45,19 @@
 				<td>Make</td>
 				<td>Model</td>
 				<td>Year</td>
+				<td>First Name</td>
+				<td>Last Name</td>
 			</tr>
 		</thead>
 		</thead>
 		<tbody>
 			{{#fleet.unavailableCars}}
 			<tr>
-				<td>{{ make }}</td>
-				<td>{{ model }}</td>
-				<td>{{ year }}</td>
+				<td>{{ car.make }}</td>
+				<td>{{ car.model }}</td>
+				<td>{{ car.year }}</td>
+				<td>{{ renter.firstName }}</td>
+				<td>{{ renter.lastName }}</td>
 				<td>
 					<form method="post" action="/returnCar">
 						<input type="hidden" name="index" value="{{ -index }}">
